Fix regression in 10ded326f68 that caused an infinite loop in slurmctld.
When requesting --distribution=plane, commit 10ded326f68 caused an
infinite loop in slurmctld. That commit moved code to a common place,
but accidentally put a continue where the loop's condition variable (tid)
should have been incremented instead, causing the condition to never be met
and therefore an infinite loop. This commit fixes the infinite loop and
restores the previous behavior.

Bug 9248

--- a/NEWS
+++ b/NEWS
@@ -57,6 +57,8 @@ documents those changes that are of interest to users and administrators.
  -- slurmrestd - use errno from job submission.
  -- Fix "user" filter for sacctmgr show transactions.
  -- Fix preemption logic.
+ -- Fix regression in 20.02 that caused an infinite loop in slurmctld when
+    requesting --distribution=plane for the job.
 
 * Changes in Slurm 20.02.3
 ==========================
