Docs - clarify SLURM_DIST_PLANESIZE env variable
Bug 9248

--- a/doc/man/man1/salloc.1
+++ b/doc/man/man1/salloc.1
@@ -1844,6 +1844,10 @@ Only set if the \fB\-\-cpus\-per\-gpu\fR option is specified.
 Number of CPUs requested per task.
 Only set if the \fB\-\-cpus\-per\-task\fR option is specified.
 .TP
+\fBSLURM_DIST_PLANESIZE\fR
+Plane distribution size. Only set for plane distributions.
+See \fB\-m, \-\-distribution\fR.
+.TP
 \fBSLURM_DISTRIBUTION\fR
 Only set if the \fB\-m, \-\-distribution\fR option is specified.
 .TP
