--- a/doc/man/man1/srun.1
+++ b/doc/man/man1/srun.1
@@ -2636,7 +2636,8 @@ Same as \fB\-P, \-\-dependency\fR=<\fIjobid\fR>
 Same as \fB\-X, \-\-disable\-status\fR
 .TP
 \fBSLURM_DIST_PLANESIZE\fR
-Same as \fB\-m plane\fR
+Plane distribution size. Only used if \fB\-\-distribution=plane\fR,
+without \fI=<size>\fR, is set.
 .TP
 \fBSLURM_DISTRIBUTION\fR
 Same as \fB\-m, \-\-distribution\fR
