--- a/doc/man/man1/sbatch.1
+++ b/doc/man/man1/sbatch.1
@@ -2151,6 +2151,10 @@ Only set if the \fB\-\-cpus\-per\-gpu\fR option is specified.
 Number of cpus requested per task.
 Only set if the \fB\-\-cpus\-per\-task\fR option is specified.
 .TP
+\fBSLURM_DIST_PLANESIZE\fR
+Plane distribution size. Only set for plane distributions.
+See \fB\-m, \-\-distribution\fR.
+.TP
 \fBSLURM_DISTRIBUTION\fR
 Same as \fB\-m, \-\-distribution\fR
 .TP
